se agrega servicio con la consulta a connectivityManager pero resta el tema d epoder acceder a la ui desde un Runnable

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -37,6 +37,12 @@
         android:layout_height="wrap_content"
         android:onClick="pintar"
         android:text="pintar" />
+    <Button
+        android:id="@+id/btnServicio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="iniciarServicio"
+        android:text="Llamar a servicio" />
     <!--<androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
         android:name="com.example.loginuceva222.BlankFragment"
